--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/marcgarygray/project-euler#readme",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
