--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "project-euler",
   "version": "0.0.1",
   "description": "Project Euler solutions",
-  "main": "dist/solutions.js",
+  "main": "dist/index.js",
+  "bin": {
+    "project-euler": "./dist/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +20,9 @@
   },
   "homepage": "https://github.com/marcgarygray/project-euler#readme",
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
+    "@tsconfig/node12": "^1.0.11",
+    "@types/node": "^18.11.7",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
