--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "project-euler": "./dist/index.js"
   },
   "scripts": {
+    "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
