--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   "devDependencies": {
     "@tsconfig/node12": "^1.0.11",
     "@types/node": "^18.11.7",
+    "@types/prompt-sync": "^4.2.0",
     "nodemon": "^2.0.20",
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
   }
 }
