target the right branch

--- a/.github/releases.yml
+++ b/.github/releases.yml
@@ -12,7 +12,7 @@ jira:
   name: DutchieBot Releases - MGG
 
 branchTicketRestrictions:
-  r/hot:
+  main:
     EC:
       - Approved
       - Implemented
