--- a/.github/releases.yml
+++ b/.github/releases.yml
@@ -12,7 +12,10 @@ jira:
   name: DutchieBot Releases - MGG
 
 branchTicketRestrictions:
-  main:
+  'r/hot':
     - EC:
       - Approved
       - Implemented
+  main:
+    - ENG:
+      - 'Ready for Release'
